# lego_sorter_ros2

./: Command-Launch.txt  PartReady.msg  README.md  RecognitionResult.msg  Terminals to Launch all.md  motors.yaml  setup.py  singulation_all.launch.py  stepper_node.py
src/lego_sorter_msgs/: CMakeLists.txt  package.xml
src/lego_sorter_msgs/msg/: BinAssignment.msg  PartZone.msg
src/singulation_controller/: package.xml  setup.cfg
src/singulation_controller/config/: motors.yaml
src/singulation_controller/launch/: singulation_all.launch.py  singulation_single.launch.py
src/singulation_controller/singulation_controller/: stepper_node.py
