<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_sorter_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 message types for the LEGO Sorter V2 pipeline.</description>
  <maintainer email="you@example.com">ChaosBuster</maintainer>
  <license>MIT</license>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
